HeatSourceParticleSim/x64/Release/HeatSourceParticleSim.log
  Compiling CUDA source file kernel.cu...
  
  C:\Users\theun\source\repos\HeatSourceParticleSim\HeatSourceParticleSim>"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.1\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.1\include" -I"C:\Users\theun\vcpkg\installed\x64-windows\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.1\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DWIN32 -DWIN64 -DNDEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o C:\Users\theun\source\repos\HeatSourceParticleSim\HeatSourceParticleSim\x64\Release\kernel.cu.obj "C:\Users\theun\source\repos\HeatSourceParticleSim\HeatSourceParticleSim\kernel.cu" 
C:\Users\theun\source\repos\HeatSourceParticleSim\HeatSourceParticleSim\GlobalVariable.cuh(47): error : return type may not be specified on a conversion function
    	__declspec(__host__) __declspec(__device__) const T& operator T() const {
    	                                            ^
  
  1 error detected in the compilation of "C:/Users/theun/source/repos/HeatSourceParticleSim/HeatSourceParticleSim/kernel.cu".
  kernel.cu
C:\Program Files\Microsoft Visual Studio\2022\Community\MSBuild\Microsoft\VC\v170\BuildCustomizations\CUDA 12.1.targets(799,9): error MSB3721: The command ""C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.1\bin\nvcc.exe" -gencode=arch=compute_52,code=\"sm_52,compute_52\" --use-local-env -ccbin "C:\Program Files\Microsoft Visual Studio\2022\Community\VC\Tools\MSVC\14.38.33130\bin\HostX64\x64" -x cu   -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.1\include" -I"C:\Users\theun\vcpkg\installed\x64-windows\include" -I"C:\Program Files\NVIDIA GPU Computing Toolkit\CUDA\v12.1\include"     --keep-dir x64\Release  -maxrregcount=0   --machine 64 --compile -cudart static    -DWIN32 -DWIN64 -DNDEBUG -D_CONSOLE -D_MBCS -Xcompiler "/EHsc /W3 /nologo /O2 /FS   /MD " -Xcompiler "/Fdx64\Release\vc143.pdb" -o C:\Users\theun\source\repos\HeatSourceParticleSim\HeatSourceParticleSim\x64\Release\kernel.cu.obj "C:\Users\theun\source\repos\HeatSourceParticleSim\HeatSourceParticleSim\kernel.cu"" exited with code 2.
